design left side bar

--- a/index.html
+++ b/index.html
@@ -8,19 +8,93 @@
 </head>
 <body>
     <section class="app">
-        <aside class="app-main">
+        <aside class="app-side-main">
             <div class="app-main-wrapper">
-                <h3 class="main-copy">Chatbase</h3>
-                <div class="main-actions">
-                    <button class="main-action">
-                        <i class="fas fa-plus-circle"></i>
-                    </button>
-                    <button>
-                        <i class="fas fa-ellipsis-v"></i>
-                    </button>
+                <div class="main-top">
+                    <h3 class="main-copy">Chatbase</h3>
+                    <div class="main-actions">
+                        <button class="icon-button icon-button-add icon-button--white">
+                            <i class="fas fa-plus-circle"></i>
+                        </button>
+                        <button class="icon-button icon-button-menu icon-button--white">
+                            <svg class="icon-button-svg" fill="currentColor" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 20 20" xml:space="preserve">
+                                <g>
+                                    <circle cx="2" cy="10" r="1.5"></circle>
+                                </g>
+                                <g>
+                                    <circle cx="10" cy="10" r="1.5"></circle>
+                                </g>
+                                <g>
+                                    <circle cx="18" cy="10" r="1.5"></circle>
+                                </g>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="main-search">
+                    <div class="main-search-wrapper">
+                        <svg class="main-search-icon" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                            <path fill="currentColor" d="M508.5 481.6l-129-129c-2.3-2.3-5.3-3.5-8.5-3.5h-10.3C395 312 416 262.5 416 208 416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c54.5 0 104-21 141.1-55.2V371c0 3.2 1.3 6.2 3.5 8.5l129 129c4.7 4.7 12.3 4.7 17 0l9.9-9.9c4.7-4.7 4.7-12.3 0-17zM208 384c-97.3 0-176-78.7-176-176S110.7 32 208 32s176 78.7 176 176-78.7 176-176 176z" class=""></path>
+                        </svg>
+                        <input class="main-search-input" type="text" placeholder="Search Here..."/>
+                    </div>
+                </div>
+
+                <div class="main-user">
+                    <div class="main-user-wrapper">
+                        <div class="main-user-item">
+                            <picture class="main-user-profile">
+                                <img src="./images/girl1.jpg" class="main-user-img"/>
+                                <i class="main-user-status --user-active"></i>
+                            </picture>
+                            <div class="main-user-info">
+                                <span class="main-user-name">Aarti Surywanshi</span>
+                                <span class="main-user-copy">Woow! I'm excited to go out!</span>
+                            </div>
+                            <i class="main-user-badge-unread">2</i>
+                        </div>
+                        <div class="main-user-item">
+                            <picture class="main-user-profile">
+                                <img src="./images/girl2.jpg" class="main-user-img"/>
+                                <i class="main-user-status --user-offline"></i>
+                            </picture>
+                            <div class="main-user-info">
+                                <span class="main-user-name">Komal Nalawde</span>
+                                <span class="main-user-copy">Superb man!</span>
+                            </div>
+                            <i class="main-user-badge-unread">12</i>
+                        </div>
+                        <div class="main-user-item">
+                            <picture class="main-user-profile">
+                                <img src="./images/male1.jpg" class="main-user-img"/>
+                                <i class="main-user-status --user-offline"></i>
+                            </picture>
+                            
+                            <div class="main-user-info">
+                                <span class="main-user-name">Yogesh Jagdale</span>
+                                <span class="main-user-copy">Haa ha, that was hilarious..</span>
+                            </div>
+                            <i class="main-user-badge-unread">99+</i>
+                        </div>
+                        <div class="main-user-item">
+                            <picture class="main-user-profile">
+                                <img src="./images/male2.jpg" class="main-user-img"/>
+                                <i class="main-user-status --user-online"></i>
+                            </picture>
+                            <div class="main-user-info">
+                                <span class="main-user-name">Atul Hegde</span>
+                                <span class="main-user-copy"></span>
+                            </div>
+                            <i class="main-user-badge-unread"></i>
+                        </div>
+                    </div>
                 </div>
             </div>
         </aside>
+        <main class="app-main">
+            <div class="app-main-area"></div>
+        </main>
     </section>
 </body>
 </html>
