--- a/index.html
+++ b/index.html
@@ -7,62 +7,64 @@
     <link rel="stylesheet" href="./css/style.css"/>
 </head>
 <body>
-    <section class="app">
+    <section class="app --effect-wave-bg">
         <section class="app-auth">
             <div class="app-auth-wrapper pos-rel trans-cm">
                 <div class="app-brand pos-abs">
                     <h2 class="app-brand-name">Chatbase</h2>
                 </div>
-                <div class="app-auth-signin">
+                <div class="app-auth-sign-form app-auth-signin">
                     <div class="auth-signin">
                         <div class="app-form-head">
                             <h3 class="app-form-title">Sign In</h3>
                         </div>
                         <div class="app-form">
                             <div class="app-form-row">
-                                <label class="app-form-label">Username</label>
                                 <input type="text" class="form-input app-form-input"/>
+                                <label class="app-form-label">Username</label>
                             </div>
                             <div class="app-form-row">
-                                <label class="app-form-label">Password</label>
                                 <input type="password" class="form-input app-form-input"/>
+                                <label class="app-form-label">Password</label>
+                                <a class="link app-form-fp">Forgot Password?</a>
                             </div>
                             <div class="app-form-controls">
                                 <div class="app-button-wrapper">
                                     <button class="app-button app-button--primary">Login</button>
-                                    <button class="app-button app-button--secondary">Sign Up</button>
+                                    <!-- <button class="app-button app-button--secondary">Sign Up</button> -->
                                 </div>
                             </div>
                         </div>
                     </div>
 
                     <p class="auth-sign-bottom">
-                        Don't have account? <a class="auth-open-su-form">Create account!</a>
+                        Don't have account? <a class="link auth-open-su-form">Create account!</a>
                     </p>
                 </div>
 
-                <div class="app-auth-up hide">
+                <div class="app-auth-sign-form app-auth-signup hide">
                     <div class="auth-up">
                         <div class="app-form-head">
-                            <h3 class="app-form-title">Create Account</h3>
+                            <h3 class="app-form-title">Sign Up</h3>
                         </div>
                         <div class="app-form">
                             <div class="app-form-row">
+                                <input type="text" class="form-input app-form-input"/>
                                 <label class="app-form-label">Name</label>
-                                <input type="text" class="form-input app-form-input"/>
                             </div>
                             <div class="app-form-row">
-                                <label class="app-form-label">Username</label>
                                 <input type="text" class="form-input app-form-input"/>
+                                <label class="app-form-label">Email</label>
                             </div>
                             <div class="app-form-row">
+                                <input type="text" class="form-input app-form-input" />
+                                <label class="app-form-label">Phone</label>
+                            </div>
+                            <div class="app-form-row">
+                                <input type="password" class="form-input app-form-input"/>
                                 <label class="app-form-label">Password</label>
-                                <input type="password" class="form-input app-form-input"/>
                             </div>
-                            <div class="app-form-row">
-                                <label class="app-form-label">Re-Password</label>
-                                <input type="password" class="form-input app-form-input"/>
-                            </div>
+    
                             <div class="app-form-controls">
                                 <div class="app-button-wrapper">
                                     <button class="app-button app-button--primary">Sign Up</button>
@@ -73,7 +75,7 @@
                     </div>
 
                     <p class="auth-sign-bottom">
-                        Already have account? <a class="auth-open-si-form">Login here!</a>
+                        Already have account? <a class="link auth-open-si-form">Login here!</a>
                     </p>
                 </div>
             </div>
@@ -313,5 +315,11 @@
             </div>
         </div>
     </section>
+
+    <div class="wave hide">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="currentColor" fill-opacity="1" d="M0,160L80,170.7C160,181,320,203,480,176C640,149,800,75,960,80C1120,85,1280,171,1360,213.3L1440,256L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path>
+        </svg>
+    </div>
 </body>
 </html>
