--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <div class="app-brand pos-abs">
                     <h2 class="app-brand-name">Chatbase</h2>
                 </div>
-                <div class="app-auth-sign-form app-auth-signin">
+                <div class="app-auth-sign-form app-auth-signin hide">
                     <div class="auth-signin">
                         <div class="app-form-head">
                             <h3 class="app-form-title">Sign In</h3>
@@ -42,7 +42,7 @@
                     </p>
                 </div>
 
-                <div class="app-auth-sign-form app-auth-signup hide">
+                <div class="app-auth-sign-form app-auth-signup">
                     <div class="auth-up">
                         <div class="app-form-head">
                             <h3 class="app-form-title">Sign Up</h3>
